--- a/templates/buscador_semantico.html
+++ b/templates/buscador_semantico.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Índice de Utilidades</title>
+    <title>Buscador de Plantas medicinales</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -25,18 +25,43 @@
     <!-- Begin page content -->
     <div class="container">
       <div class="page-header">
-        <h1>Índice de utilidades</h1>
+        <h1>Plantas Medicinales de la zona andina de la provincia de Loja</h1>
       </div>
+      <p class="lead">El uso de las plantas como alternativa de alivio de dolencias en la salud del hombre y sus animales
+domésticos en las zonas rurales del Ecuador y particularmente en la provincia de Loja aún se mantiene
+y, en algunas zonas es muy arraigada, única y eficiente.</p>
 
-        <ul>
-            <li><a href="{% url 'buscador' %}">Buscador de plantas medicinales</a></li>
-            <li><a href="{% url 'anotador' %}">Anotador de entidades</a></li>
+        <form method="POST">
+    {% csrf_token %}
 
-        </ul>
+        <div class="form-group">
+            <h2>Enfermedades</h2>
+          <label for="sel1">Lista de selección:</label>
+          <select class="form-control" id="sel1" name="lista">
+              <option value="---Seleccione Enfermedad---">--- Seleccione Enfermedad ---</option>
+            {% for i in datos %}
+          <option value="{{i}}">{{i}}</option>
+            {% endfor %}
+          </select>
+        </div>
+            <!--<input type="submit" value="Submit" /> -->
+
+        </form>
+
+        <div>
+            <h2>Plantas medicinales</h2>
+
+            <div id="plantas">
+
+            </div>
+        </div>
 
 
+
+        <br>
+        <br>
+       <a href="{% url 'index' %}" class="btn btn-success">Retroceder</a>
     </div>
-
 
     <footer class="footer">
       <div class="container">
