--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,10 @@
         <ul>
             <li><a href="{% url 'buscador' %}">Buscador de plantas medicinales</a></li>
             <li><a href="{% url 'anotador' %}">Anotador de entidades</a></li>
+            <li><a href="{% url 'buscador_skos' %}">Buscador SKOS</a></li>
+
+          <li><a href="{% url 'visualizador' %}">Visualización SKOS</a></li>
+            <li><a href="{% url 'visualizador2' %}">Visualización SKOS</a></li>
 
         </ul>
 
